--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    html,
+    body {
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #191919;
+      color: #00ffff;
+    }
+
+    h1 {
+      font-size: 5rem;
+    }
+  </style>
   <script type="module" src="tasks.js"></script>
   <script type="module" src="script.js"></script>
   <title>JS Tasks</title>
